--- a/clone_frontend/package.json
+++ b/clone_frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
@@ -39,8 +40,8 @@
     ]
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.1",
     "autoprefixer": "^9.8.8",
-    "postcss": "^7.0.39",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   }
 }
